Fix: Vertical card rules for big story on IE8

--- a/shared/components/_card-ie8.scss
+++ b/shared/components/_card-ie8.scss
@@ -6,5 +6,9 @@
 		top: oGridGutter(M) / 2;
 		bottom: oGridGutter(M) / -2;
 		left: oGridGutter(M) / -2;
+
+		.column--related & {
+			bottom: oGridGutter(M) / 2;
+		}
 	}
 }
